added div tag and updated intro class
Co-Autored by
hernanverar hernanverar@gmail.com

--- a/style.css
+++ b/style.css
@@ -1,10 +1,14 @@
 img {
-        max-width:50%;
+        max-width:500px;
         height: auto;
 }
 
 h2.intro {
-    font-style: italic;
+    font-style: italic
+}
+
+div {
+    width: 50vw;
 }
 
 p.intro {
